# taproot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/fixtures/: tickets.json
docs/: architecture.md
src/taproot/: agent.py  cli.py  config.py  pageindex.py
src/taproot/mock/: __init__.py  data_loader.py
src/taproot/models/: __init__.py  problem.py  ticket.py
src/taproot/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  bedrock_provider.py  openai_provider.py  router.py  scrubbed_provider.py
src/taproot/scrubbing/: __init__.py  scrubber.py
src/taproot/tools/: __init__.py  analysis.py  problems.py  tickets.py
tests/: conftest.py  test_agent.py  test_cli.py  test_models.py  test_pageindex.py  test_providers.py  test_router.py  test_scrubber.py  test_tools.py
