[project]
name = "taproot"
version = "0.2.0"
description = "Agentic ITSM problem management — surfaces recurring patterns from incident ticket history"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Himanshu A"}]
dependencies = [
    "anthropic>=0.50.0",
    "openai>=1.50.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
taproot = "taproot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taproot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
